--- a/resumates/src/pages/ProfilePage/ProfilePage.css
+++ b/resumates/src/pages/ProfilePage/ProfilePage.css
@@ -3,14 +3,14 @@
 }
 
 .ProfHeader {
-    color: white; 
+    color: rgb(17, 16, 16); 
     font-size: 24px;    
     text-align: start;
 }
 
 #ProfLink {
    text-align: end;
-   color: white;  
+   color: rgb(10, 10, 10);  
    font-size: 16px;
    font-weight: bold;
 }
@@ -51,11 +51,11 @@
 .ResumeTitle {
   margin-bottom: -10px;
   font-size: 13px;
-  color: white;
+  color: rgb(37, 55, 159);
 }
 
 .ResumeLevel {
-  color: #d4dad2;
+  color: #030303;
 }
 
 #Logo {
