--- a/resumates/src/pages/AuthPage/AuthPage.css
+++ b/resumates/src/pages/AuthPage/AuthPage.css
@@ -1,10 +1,11 @@
 .AuthPage {
     height: 100%;
-    display: flex;
+
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--white);
     border-radius: 2vmin;
+    margin-top: 150px;
   }
   
   .AuthPage h3 {
@@ -13,4 +14,12 @@
     color: var(--text-light);
     cursor: pointer;
   }
-  
+ #invisible {
+   background-color: #1a73db;
+    border-radius: 20px;
+    width: 300px;
+    height: 37px;
+    text-transform: capitalize;
+    color: rgb(255, 255, 255);
+    margin: 10px;
+ }
